--- a/src/modules/MobileSelect/MobileSelect.scss
+++ b/src/modules/MobileSelect/MobileSelect.scss
@@ -14,14 +14,14 @@
 
   .popularcities {
     background-color: #e4e4e4;
-    padding-bottom: 20px;
+    padding-bottom: 1.25em;
     .hotitem {
         float: left;
         width: 23%;
         text-align: center;
-        margin: 8px 5%;
+        margin: 0.5em 5%;
         color: #888;
-        font-size: 15px;
+        font-size: 1em;
     }
   }
 
@@ -41,9 +41,9 @@
   .hottitle {
     color: rgb(142, 164, 131);
     text-align: center;
-    font-size: 15px;
-    margin: 0 5% 10px 5%;
-    padding: 15px 0 5px 0;
+    font-size: 1em;
+    margin: 0 5% 0.625em 5%;
+    padding: 1em 0 0.3125em 0;
     font-weight: normal;
     text-align: left;
     border-bottom: 1px solid #ccc;
@@ -76,7 +76,7 @@
   transition: all 0.4s;
   bottom: -350px;
   left: 0;
-  background: white;
+  background: #fff;
 }
 .mobileSelect .content .fixWidth {
   width: 90%;
@@ -189,5 +189,5 @@
   visibility: visible;
 }
 .mobileSelect-show .content {
-  bottom: 0;
+  bottom: 0px;
 }
