--- a/src/modules/MobileSelect/MobileSelect.scss
+++ b/src/modules/MobileSelect/MobileSelect.scss
@@ -92,16 +92,16 @@
 }
 .mobileSelect .content .btnBar {
   border-bottom: 1px solid #DCDCDC;
-  font-size: 15px;
-  height: 45px;
+  font-size: 1em;
+  height: 2.8125em;
   position: relative;
   text-align: center;
-  line-height: 45px;
+  line-height: 2.8125em;
 }
 .mobileSelect .content .btnBar .cancel,
 .mobileSelect .content .btnBar .ensure {
-  height: 45px;
-  width: 55px;
+  height: 2.8125em;
+  width: 3.4375em;
   cursor: pointer;
   position: absolute;
   top: 0;
@@ -115,7 +115,7 @@
   color: #1e83d3;
 }
 .mobileSelect .content .btnBar .title {
-  font-size: 15px;
+  font-size: 1em;
   padding: 0 15%;
   overflow: hidden;
   white-space: nowrap;
@@ -130,7 +130,7 @@
 }
 .mobileSelect .content .panel .wheels {
   width: 100%;
-  height: 200px;
+  height: 12.5em;
   overflow: hidden;
 }
 .mobileSelect .content .panel .wheel {
@@ -138,7 +138,7 @@
   z-index: 0;
   float: left;
   width: 50%;
-  height: 200px;
+  height: 12.5em;
   overflow: hidden;
   -webkit-transition: width 0.3s ease;
   transition: width 0.3s ease;
@@ -152,20 +152,20 @@
   transition: transform 0.18s ease-out, -webkit-transform 0.18s ease-out;
 }
 .mobileSelect .content .panel .wheel .selectContainer li {
-  font-size: 15px;
+  font-size: 1em;
   display: block;
-  height: 40px;
-  line-height: 40px;
+  height: 2.5em;
+  line-height: 2.5em;
   cursor: pointer;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 .mobileSelect .content .panel .selectLine {
-  height: 40px;
+  height: 2.5em;
   width: 100%;
   position: absolute;
-  top: 80px;
+  top: 5em;
   pointer-events: none;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -176,7 +176,7 @@
   position: absolute;
   top: 0;
   width: 100%;
-  height: 200px;
+  height: 12.5em;
   background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), color-stop(rgba(255, 255, 255, 0)), to(#ffffff));
   background: -webkit-linear-gradient(top, #ffffff, rgba(255, 255, 255, 0), #ffffff);
   background: linear-gradient(to bottom, #ffffff, rgba(255, 255, 255, 0), #ffffff);
