--- a/src/modules/MobileSelect/MobileSelect.scss
+++ b/src/modules/MobileSelect/MobileSelect.scss
@@ -121,6 +121,9 @@
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+.mobileSelect .content .panel {
+  background-color: #aaa;
+}
 .mobileSelect .content .panel:after {
   content: ".";
   display: block;
@@ -130,7 +133,6 @@
 }
 .mobileSelect .content .panel .wheels {
   width: 100%;
-  height: 12.5em;
   overflow: hidden;
 }
 .mobileSelect .content .panel .wheel {
@@ -138,7 +140,6 @@
   z-index: 0;
   float: left;
   width: 50%;
-  height: 12.5em;
   overflow: hidden;
   -webkit-transition: width 0.3s ease;
   transition: width 0.3s ease;
@@ -162,10 +163,8 @@
   text-overflow: ellipsis;
 }
 .mobileSelect .content .panel .selectLine {
-  height: 2.5em;
   width: 100%;
   position: absolute;
-  top: 5em;
   pointer-events: none;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -176,9 +175,6 @@
   position: absolute;
   top: 0;
   width: 100%;
-  height: 12.5em;
-  background: -webkit-gradient(linear, left top, left bottom, from(#ffffff), color-stop(rgba(255, 255, 255, 0)), to(#ffffff));
-  background: -webkit-linear-gradient(top, #ffffff, rgba(255, 255, 255, 0), #ffffff);
   background: linear-gradient(to bottom, #ffffff, rgba(255, 255, 255, 0), #ffffff);
   opacity: 0.9;
   pointer-events: none;
