--- a/src/modules/MobileSelect/MobileSelect.scss
+++ b/src/modules/MobileSelect/MobileSelect.scss
@@ -122,7 +122,7 @@
   text-overflow: ellipsis;
 }
 .mobileSelect .content .panel {
-  background-color: #aaa;
+  background-color: #fff;
 }
 .mobileSelect .content .panel:after {
   content: ".";
