--- a/src/modules/MobileSelect/MobileSelect.scss
+++ b/src/modules/MobileSelect/MobileSelect.scss
@@ -99,7 +99,7 @@
   line-height: 2.8125em;
 }
 .mobileSelect .content .btnBar .cancel,
-.mobileSelect .content .btnBar .ensure {
+.mobileSelect .content .btnBar .confirm {
   height: 2.8125em;
   width: 3.4375em;
   cursor: pointer;
@@ -110,7 +110,7 @@
   left: 0;
   color: #666;
 }
-.mobileSelect .content .btnBar .ensure {
+.mobileSelect .content .btnBar .confirm {
   right: 0;
   color: #1e83d3;
 }
